@@ -1,5 +1,12 @@
 2008-03-07  Alexander Larsson  <alexl@redhat.com>
 
+        * hal/ghalvolumemonitor.c:
+        (get_mount_point_for_device):
+        (should_volume_be_ignored):
+	Really make sure we ignore stuff outside /media (#520615)
+
+2008-03-07  Alexander Larsson  <alexl@redhat.com>
+
         * hal/ghalmount.c:
         (get_disc_name):
 	Translate disc names.
